--- a/index.html
+++ b/index.html
@@ -16,9 +16,13 @@
         margin: 0;
         padding: 0;
       }
+
     </style>
   </head>
-  <body onload="initialize()">
+  <body>
+    <p>
+      <input type="button" style="width:90%; font-size:50px;" value="冒険地図作成" onclick="initialize()">
+    </p>
     <div id="map"></div>
     <script type = "text/javascript" src="Map2.js"></script>
     <script async defer
