--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
   <body>
     <p>
       <input type="button" style="width:90%; font-size:50px;" value="冒険地図作成" onclick="initialize()">
+      <form id="target">
+        <input name="hoge" type="radio" value="アイコン">アイコン
+        <input name="hoge" type="radio" value="コメント">コメント
+      </form>
     </p>
     <div id="map"></div>
     <script type = "text/javascript" src="Map2.js"></script>
