--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <form id="target">
         <input name="hoge" type="radio" value="アイコン">アイコン
         <input name="hoge" type="radio" value="コメント">コメント
+        <input name="hoge" type="radio" value="アイコン削除">アイコン削除
       </form>
     </p>
     <div id="map"></div>
