--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         img2.src = "star4.png";
         var ctx = canvas.getContext("2d");
         var options = {width: 95, height: 95};
-        img = median(img);
+        //img = median(img);
         SmartCrop.crop(img, options, function(result) {
 
 
