--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
         <input name="hoge" type="radio" value="アイコン削除">アイコン削除
       </form>
     </p>
+    <form>
+      <p>フレーム選択</p>
+      <select id="kimoti">
+        <option value="bikkuri" selected>びっくり</option>
+        <option value="heart">ハート</option>
+        <option value="jaaku">邪悪</option>
+        <option value="hatena">謎</option>
+        <option value="hikari">光</option>
+      </select>
+    </form>
     <p><input type="file" accept="image/*" capture="camera" id="file-image"></p>
     <div id="map"></div>
     <script type = "text/javascript" src="Map2.js"></script>
