--- a/freeHandWrite2.html
+++ b/freeHandWrite2.html
@@ -1,5 +1,6 @@
 <html>
 	<head>
+	<meta name="viewport" content="width=500px initial-scale=0.64" />
 	<meta charset="utf-8">
     <title>Canvasお絵描きアプリ - YoheiM.NET</title>
 
@@ -69,7 +70,7 @@
         var canvasItems = [];
 
 		//initialize
-		$(".setWidth:nth-child(4)").css("background-color", "red");
+		$(".setWidth:nth-child(2)").css("background-color", "red");
 
 		// control drawFlag.
 		body.mousedown(function(e){
@@ -436,17 +437,19 @@ function scrollY(){return document.documentElement.scrollTop || document.body.sc
 	</div>
 
 	<div style="float:left;">
-		<div id="pointer">
+		<!-- <div id="pointer">
 			x : <span id="p1"></span>,
 			y : <span id="p2"></span>
 		</div>
 		<div id="canDraw">Drawing NO</div>
-		<div>
+		<div> -->
 			<span>Width : </span>
+			<!--
 			<button class="setWidth nomalBtn">1</button>
 			<button class="setWidth nomalBtn">5</button>
 			<button class="setWidth nomalBtn">10</button>
 			<button class="setWidth nomalBtn">15</button>
+		-->
 			<button class="setWidth nomalBtn">20</button>
 		</div>
 		<div id="colorPicker">
@@ -465,9 +468,9 @@ function scrollY(){return document.documentElement.scrollTop || document.body.sc
                 <div style="clear:both;"></div>
             </div>
 		</div>
-		<div><button id="tmpSaveButton" class="nomalBtn">一時保存</button><span style="font-size:small;">（最大10個まで）</span></div>
+		<!-- <div><button id="tmpSaveButton" class="nomalBtn">一時保存</button><span style="font-size:small;">（最大10個まで）</span></div>
 		<div><button id="saveButton" class="nomalBtn">画像としてダウンロードする</button></div>
-		<div><button id="drawButton" class="nomalBtn">自由に描く</button> <button id="poligonButton" class="nomalBtn">四角を描く</button></div>
+		<div><button id="drawButton" class="nomalBtn">自由に描く</button> <button id="poligonButton" class="nomalBtn">四角を描く</button></div> -->
         <div><button id="clearButton" class="nomalBtn">クリアする</button> <button id="iconButton" class="nomalBtn">アイコン化</button></div>
 
 
