--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
       <a href="#" id="shokuji" onclick="imgClick(this);"><img src="shokuji.png" width="200" height="200"></a>
       <a href="#" id="bus" onclick="imgClick(this);"><img src="bus.png" width="200" height="200"></a>
     </div>
-
+    <button onclick="iconhozon()">アイコン保存</button>
+    <button onclick="iconload()">アイコン読み込み</button>
     <button onclick="hozon()">地図の保存</button>
     <button onclick="load()">地図の読み込み</button>
     <button onclick="dataClear()">地図を消す</button>
