--- a/freeHandWrite2.html
+++ b/freeHandWrite2.html
@@ -9,7 +9,7 @@
     <style TYPE="text/css">
         * {margin:0px; padding:0px;}
         body {margin:10px;}
-        #canvasArea {background-color:white; position:relative; width:400px; height:600px; border-style: solid; border-width: 1px;}
+        #canvasArea {background-color:#eddfdd; position:relative; width:600px; height:600px; border-style: solid; border-width: 1px;}
         #myCanvas {position:absolute; top:0px; left:0px;}
         .tmpImage {background-color:black; margin-right:5px;}
         .layer {width:100px; background-image:url("bg_none.png"); margin-top:5px; margin-left:5px; border:3px solid black; float:left;}
@@ -433,7 +433,7 @@ function scrollY(){return document.documentElement.scrollTop || document.body.sc
 	<img id= "mainimg">
 
 	<div id="canvasArea" style="float:left;">
-		<canvas id="myCanvas" height="600px" width="400px"></canvas>
+		<canvas id="myCanvas" height="600px" width="600px"></canvas>
 	</div>
 
 	<div style="float:left;">
