--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
     <button onclick="load()">地図の読み込み</button>
     <button onclick="dataClear()">地図を消す</button>
     <p>
-      <input type="button" style="width:90%; font-size:50px;" value="冒険地図作成" onclick="initialize()">
+      <input type="button" style="width:40%; font-size:50px;" value="範囲限定地図" onclick="initialize1()">
+      <input type="button" style="width:40%; font-size:50px;" value="オープン地図" onclick="initialize2()">
       <form id="target">
         <input name="hoge" type="radio" value="アイコン">アイコン
         <input name="hoge" type="radio" value="コメント">コメント
@@ -67,6 +68,7 @@
     </form>
     <p><input type="file" accept="image/*" capture="camera" id="file-image"></p>
     <div id="map"></div>
+    <script type = "text/javascript" src="Map1.js"></script>
     <script type = "text/javascript" src="Map2.js"></script>
     <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCB7f-0pGCHFUKHf4JLZnQaF2l5_uuFNWE&libraries=geometry">
