--- a/oekaki.html
+++ b/oekaki.html
@@ -1,56 +1,86 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>お絵かき</title>
-    <meta name="viewport" content="width=500px initial-scale=0.64" />
-    <meta charset="utf-8">
-		<style>
-      body {
-        background: #666;
-      }
-      canvas {
-        background: #fff;
-      }
-      button {
-          width: 50px;
-      }
-    </style>
-  </head>
-  <body>
-    <div>
-      <canvas id="canvas" width="400" height="400"></canvas>
-    </div>
-    <div>
-      <button onclick="changeColor('red')">red</button>
-      <button onclick="changeColor('blue')">blue</button>
-      <button onclick="changeColor('green')">green</button>
-      <button onclick="changeColor('yellow')">yellow</button>
-      <button onclick="changeColor('black')">black</button>
-    </div>
-    <script>
-		
-		const canvas = document.querySelector('canvas');
-		const context = canvas.getContext('2d');
+	<html lang="ja">
+	<head>
+	  <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	  <title>Mam 手書きお絵かきJavascriptサンプル</title>
+	  <meta name="viewport" content="width=device-width,init-scale=1,user-scalable=no,minimum-scale=1,maximum-scale=1">
+	<script>
+	var can;
+	var ct;
+	var ox=0,oy=0,x=0,y=0;
+	var mf=false;
+	  function mam_draw_init(){
+	    //初期設定
+	    can=document.getElementById("can");
+	    can.addEventListener("touchstart",onDown,false);
+	    can.addEventListener("touchmove",onMove,false);
+	    can.addEventListener("touchend",onUp,false);
+	    can.addEventListener("mousedown",onMouseDown,false);
+	    can.addEventListener("mousemove",onMouseMove,false);
+	    can.addEventListener("mouseup",onMouseUp,false);
+	    ct=can.getContext("2d");
+	    ct.strokeStyle="#000000";
+	    ct.lineWidth=5;
+	    ct.lineJoin="round";
+	    ct.lineCap="round";
+	    clearCan();
+	  }
+	  function onDown(event){
+	    mf=true;
+	    ox=event.touches[0].pageX-event.target.getBoundingClientRect().left;
+	    oy=event.touches[0].pageY-event.target.getBoundingClientRect().top;
+	    event.stopPropagation();
+	  }
+	  function onMove(event){
+	    if(mf){
+	      x=event.touches[0].pageX-event.target.getBoundingClientRect().left;
+	      y=event.touches[0].pageY-event.target.getBoundingClientRect().top;
+	      drawLine();
+	      ox=x;
+	      oy=y;
+	      event.preventDefault();
+	      event.stopPropagation();
+	    }
+	  }
+	  function onUp(event){
+	    mf=false;
+	    event.stopPropagation();
+	  }
 
-		document.addEventListener('mousedown', (event) => {
-    	context.beginPath();
-    	context.moveTo(event.clientX, event.clientY);
-    	document.addEventListener('mousemove', stroke);
-		});
-
-		function stroke(event) {
-    	context.lineTo(event.clientX, event.clientY);
-    	context.stroke();
-		}
-
-		document.addEventListener('mouseup', (event) => {
-    	document.removeEventListener('mousemove', stroke);
-		});
-
-		function changeColor(color) {
-    	context.strokeStyle = color;
-		}
-
-		</script>
-  </body>
-</html>
+	  function onMouseDown(event){
+	    ox=event.clientX-event.target.getBoundingClientRect().left;
+	    oy=event.clientY-event.target.getBoundingClientRect().top ;
+	    mf=true;
+	  }
+	  function onMouseMove(event){
+	    if(mf){
+	      x=event.clientX-event.target.getBoundingClientRect().left;
+	      y=event.clientY-event.target.getBoundingClientRect().top ;
+	      drawLine();
+	      ox=x;
+	      oy=y;
+	    }
+	  }
+	  function onMouseUp(event){
+	    mf=false;
+	  }
+	  function drawLine(){
+	    ct.beginPath();
+	    ct.moveTo(ox,oy);
+	    ct.lineTo(x,y);
+	    ct.stroke();
+	  }
+	  function clearCan(){
+	    ct.fillStyle="rgb(255,255,255)";
+	    ct.fillRect(0,0,can.getBoundingClientRect().width,can.getBoundingClientRect().height);
+	  }
+	</script>
+	</head>
+	<body onload="mam_draw_init();">
+	    <h3>手書きお絵かきJavascriptサンプル</h3>
+	    <div style="border:solid 1px #000000;width:100%;" id="candiv">
+	      <canvas id="can" width="384px" height="400px"></canvas>
+	    </div>
+	    <input type="button" onClick="clearCan();" value="クリア" style="width:100;height:30;" data-inline="true" />
+	</body>
+	</html>
