--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Data Layer: Polygon</title>
-    <meta name="viewport" content="initial-scale=1.0">
+    <meta name="viewport" content="width=500px initial-scale=0.64">
     <meta charset="utf-8">
     <style>
       /* Always set the map height explicitly to define the size of the div
@@ -25,6 +25,22 @@
           cursor: pointer;
           overflow-y: auto;
       }
+
+      #overlay2 {
+          position: fixed;
+          display: none;
+          width: 100%;
+          height: 100%;
+          top: 0;
+          left: 0;
+          right: 0;
+          bottom: 0;
+          background-color: rgba(0,0,0,0.5);
+          z-index: 2;
+          cursor: pointer;
+          overflow-y: auto;
+      }
+
       #color {
         list-style: none;
         overflow: hidden;
@@ -67,11 +83,13 @@
         margin-right: 2px;
       }
 
-      #color li a {
-        text-decoration: none;
-        color: #fff;
-        font-weight: bold;
-        padding: 20px;
+      li a {
+        width: 140px;
+        text-align: center;
+        background-color: #0f0;
+        height: 50px;
+        line-height: 50px;
+        margin-right: 2px;
       }
 
       /* Optional: Makes the sample page fill the window. */
@@ -97,12 +115,16 @@
     <button onclick="load()">地図の読み込み</button>
     <button onclick="dataClear()">地図を消す</button>
   -->
-    <ul id="color">
-      <li1><a href="#" id="red" onclick="colorChange(this)">MENU1</a></li1>
-      <li2><a href="#" id="blue" onclick="colorChange(this)">MENU2</a></li2>
-      <li3><a href="#" id="green" onclick="colorChange(this)">MENU3</a></li3>
-      <li4><a href="#" id="black" onclick="colorChange(this)">MENU4</a></li4>
-    </ul>
+    <li><a href="#" id="option" onclick="option()">オプション</a></li>
+
+    <div id="overlay2" onclick="off2()">
+      <ul id="color" onclick="off2()">
+        <li1><a href="#" id="red" onclick="colorChange(this)">MENU1</a></li1>
+        <li2><a href="#" id="blue" onclick="colorChange(this)">MENU2</a></li2>
+        <li3><a href="#" id="green" onclick="colorChange(this)">MENU3</a></li3>
+        <li4><a href="#" id="black" onclick="colorChange(this)">MENU4</a></li4>
+      </ul>
+    </div>
     <p1>
       <input type="button" style="width:40%; font-size:50px;" value="範囲限定地図" onclick="initialize1()">
       <input type="button" style="width:40%; font-size:50px;" value="オープン地図" onclick="initialize2()">
