--- a/oekaki.html
+++ b/oekaki.html
@@ -76,17 +76,7 @@
 	    ct.fillRect(0,0,can.getBoundingClientRect().width,can.getBoundingClientRect().height);
 	  }
 		function iconka(){
-				var cc = document.createElement("canvas");
-				cc.width  = can.width();
-				cc.height = can.height();
-				for (var i = 0; i < layer.length; i++) {
-						layer[i].width = can.width() + "px";
-								layer[i].height = can.height() + "px";
-								cc.getContext("2d").drawImage(layer[i], 0, 0);
-								layer[i].width = 100 + "px";
-								layer[i].height = Math.floor(100 * can.height() / can.width()) + "px";
-						}
-				var imgData = cc.toDataURL();
+				var imgData = can.toDataURL();
 				window.opener.irasutoka(imgData);
 				window.open('about:blank', '_self').close();
 	  }
