--- a/index.html
+++ b/index.html
@@ -153,5 +153,6 @@
     <input type="file" accept="image/*" capture="camera" id="file-image">
   </p2>
     <div id="map"></div>
+    <image id="test9"></image>
     </body>
 </html>
