--- a/oekaki.html
+++ b/oekaki.html
@@ -88,6 +88,7 @@
 	    <div style="border:solid 1px #000000;width:320px;" id="candiv">
 	      <canvas id="can" width="320px" height="400px"></canvas>
 	    </div>
+			<image id="test"></image>
 	    <input type="button" onClick="clearCan();" value="クリア" style="width:100;height:50;" data-inline="true" />
 			<input type="button" onClick="iconka();" value="アイコン化" style="width:100;height:50;" data-inline="true" />
 	</body>
