--- a/freeHandWrite2.html
+++ b/freeHandWrite2.html
@@ -324,6 +324,7 @@
             console.log("selectMe:pos_layer="+pos_layer);
             refreshCanvas();
         }
+
         function refreshCanvas(){
             canvasArea.children("img").remove();
             canvasItems = [];
@@ -416,7 +417,7 @@ function scrollY(){return document.documentElement.scrollTop || document.body.sc
 
 /*********** Initialize (Start) ****************/
         //$("#addLayerButton").click(addLayer);
-        addLayer();
+        //addLayer();
 				addLayer();
 
 /*********** Initialize (End) ****************/
