--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         <option value="hikari">光</option>
       </select>
     </form>-->
-    <input type="file" accept="image/*" capture="camera" style="width:30%; height:40px;" id="file-image">
+    <input type="file" accept="image/*" capture="camera" style="width:30%; height:40px;" id="file-image"><div id="picture"></div>
   <!--</p2>-->
     <div id="map"></div>
     </body>
