--- a/index.html
+++ b/index.html
@@ -117,7 +117,6 @@
     </style>
     <script src="https://unpkg.com/dexie@latest/dist/dexie.js"></script>
     <script type = "text/javascript" src="Map1.js"></script>
-    <script type = "text/javascript" src="Map2.js"></script>
     <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCB7f-0pGCHFUKHf4JLZnQaF2l5_uuFNWE&libraries=geometry">
     </script>
@@ -131,10 +130,8 @@
       <a href="#" id="shokuji" onclick="imgClick(this);"><img src="shokuji.png" width="200" height="200"></a>
       <a href="#" id="bus" onclick="imgClick(this);"><img src="bus.png" width="200" height="200"></a>
     </div>
-    <button onclick="iconhozon()">アイコン保存</button>
-    <button onclick="iconload()">アイコン読み込み</button>
-    <button onclick="hozon()">地図の保存</button>
-    <button onclick="load()">地図の読み込み</button>
+    <button onclick="hozon()">冒険地図を保存</button>
+    <button onclick="load()">アイコン読み込み</button>
     <button onclick="comment_load()">コメント読み込み</button>
     <button onclick="dataClear()">地図を消す</button>
     <li><a href="#" id="option" onclick="option()">オプション</a></li>
