--- a/oekaki.html
+++ b/oekaki.html
@@ -84,7 +84,7 @@
 		function iconka(){
 				var imgData = can.toDataURL();
 				window.opener.irasutoka(imgData);
-				console.log(imgData);
+				window.open('about:blank', '_self').close();
 				//window.open('about:blank', '_self').close();
 	  }
 		function draw_color(c){
