--- a/index.html
+++ b/index.html
@@ -131,8 +131,7 @@
       <a href="#" id="bus" onclick="imgClick(this);"><img src="bus.png" width="200" height="200"></a>
     </div>
     <button onclick="hozon()">冒険地図を保存</button>
-    <button onclick="load()">アイコン読み込み</button>
-    <button onclick="comment_load()">コメント読み込み</button>
+    <button onclick="load()">冒険地図読み込み</button>
     <button onclick="dataClear()">地図を消す</button>
     <li><a href="#" id="option" onclick="option()">オプション</a></li>
 
