--- a/index.html
+++ b/index.html
@@ -185,12 +185,12 @@
     <button onclick="load()">冒険地図読み込み</button>
     <button onclick="dataClear()">地図を消す</button>
   -->
-    <a href="#" class="square_btn" id="1" onclick="hozon(this)">冒険地図を1に保存</a>
-    <a href="#" class="square_btn" id="2" onclick="hozon(this)">冒険地図を2に保存</a>
-    <a href="#" class="square_btn" id="3" onclick="hozon(this)">冒険地図を3に保存</a>
-    <a href="#" class="square_btn" id="1" onclick="load(this)">冒険地図読み込み</a>
-    <a href="#" class="square_btn" id="2" onclick="load(this)">冒険地図読み込み</a>
-    <a href="#" class="square_btn" id="3" onclick="load(this)">冒険地図読み込み</a>
+    <a href="#" class="square_btn" id="1" onclick="hozon(this)">冒険地図1に保存</a>
+    <a href="#" class="square_btn" id="2" onclick="hozon(this)">冒険地図2に保存</a>
+    <a href="#" class="square_btn" id="3" onclick="hozon(this)">冒険地図3に保存</a>
+    <a href="#" class="square_btn" id="1" onclick="load(this)">冒険地図１読み込み</a>
+    <a href="#" class="square_btn" id="2" onclick="load(this)">冒険地図２読み込み</a>
+    <a href="#" class="square_btn" id="3" onclick="load(this)">冒険地図３読み込み</a>
     <a href="#" class="square_btn" onclick="dataClear()">地図を消す</a>
     <li><a href="#" id="option" onclick="option()">オプション</a></li>
 
